# hubo_ros_core

./: .gitignore  README.md
hubo_ach_components/: CMakeLists.txt  package.xml
hubo_ach_components/include/: hubo_ach_components
hubo_ach_ros_bridge/: CMakeLists.txt  package.xml  setup.py
hubo_ach_ros_bridge/config/: drchubo_fullbody_params.yaml  huboplus_fullbody_params.yaml  huboplus_fullbody_params_wfingers.yaml
hubo_ach_ros_bridge/include/hubo_ach_ros_bridge/: ach_ros_wrapper.h
hubo_ach_ros_bridge/launch/: display_drchubo_state.launch  display_hubo_state.launch  display_huboplus_state.launch  drchubo_full_body_bridge_interface.launch  drchubo_full_body_feedback_node.launch  drchubo_full_body_feedforward_node.launch  full_body_feedback_node.launch  full_body_feedforward_node.launch  huboplus_full_body_bridge_interface.launch  huboplus_full_body_feedback_node.launch  huboplus_full_body_feedforward_node.launch
hubo_ach_ros_bridge/src/: hubo_ros_feedback.cpp  hubo_ros_feedforward_control.cpp
hubo_ach_ros_bridge/src/hubo_ach_ros_bridge/: __init__.py  body_orientation_publisher.py  drchubo_joint_state_publisher.py  hubo_joint_state_publisher.py
hubo_components/: CMakeLists.txt  package.xml
hubo_components/config/: drchubo_fullbody_params.yaml  drchubo_fullbody_wfingers_params.yaml  drchubo_torso_params.yaml  drchubo_torso_wfingers_params.yaml  huboplus_fullbody_params.yaml
hubo_components/include/hubo_components/: control-daemon.h  daemonizer.h  hubo  hubo-daemonID.h  hubo-jointparams.h  hubo.h  link_headers.sh
hubo_components/include/hubo_components/hubo_components/: link_headers.sh
hubo_components/include/hubo_motion_components/: Hubo_Control.h  hubo-daemon.h  manip.h  motion-trajectory.h
hubo_description/: CMakeLists.txt  package.xml
hubo_description/huboplus/: huboplus.xacro
hubo_forward_kinematics/: CMakeLists.txt  package.xml
hubo_head_controller/: CMakeLists.txt  package.xml  setup.py
hubo_head_controller/launch/: head_controller_manager.launch  head_controller_spawner.launch
hubo_head_controller/src/: head_controller.cpp
hubo_head_controller/src/hubo_head_controller/: __init__.py  dynamixel_tester.py  laser_orientation_publisher.py  laser_scan_controller.py  point_head_controller.py  test_head.py
hubo_head_controller/test/system/: head_control.test  test_head_controller.cpp
hubo_laser_controller/: CMakeLists.txt  package.xml
hubo_launch/: CMakeLists.txt  package.xml
hubo_launch/config/: camera_manager.yaml  drchubo_fullbody_wfingers_params.yaml  drchubo_head.yaml  drchubo_head_controllers.yaml  drchubo_head_controllers_v2.yaml  drchubo_torso_params.yaml  drchubo_torso_wfingers_params.yaml  flea3_camera_info.yaml  huboplus_fullbody_wfingers_params.yaml
hubo_launch/launch/: backpack.launch  backpack_old.launch  camera_manager.launch  camera_test.launch  display_drchubo_state.launch  drchubo_full_body_bridge_interface.launch  drchubo_rgbd_frames.launch  drchubo_sensor_frames.launch  drchubo_trinocular_frames.launch  drexel_sensor_head_controllers.launch  full_body_feedback_node.launch  full_body_trajectory_action_node.launch  full_body_trajectory_controller_node.launch  gt_sensor_head_controllers.launch  head_controller_manager.launch  head_controller_spawner.launch  huboplus_full_body_trajectory_interface.launch  pointgrey_camera.launch  rgbd_image_link_end.launch  rgbd_image_link_start.launch  rgbd_link_end.launch  rgbd_link_end_old.launch  rgbd_link_start.launch  rgbd_link_start_old.launch  rgbd_pointcloud_link_end.launch  rgbd_pointcloud_link_end_old.launch  rgbd_pointcloud_link_start.launch  sensor_head_controllers.launch  workstation.launch  workstation_experimental.launch  workstation_experimental_old.launch  workstation_old.launch
hubo_launch/launch/deprecated/: basic_backpack.launch  beta_head_controller_manager.launch  camera_link_start.launch  drchubo_full_body_trajectory_interface.launch  full_body_feedforward_node.launch  huboplus_full_body_bridge_interface.launch
hubo_launch/launch/openni2_launch/: drchubo_longrange_rgbd.launch  drchubo_rgbd.launch  drchubo_shortrange_rgbd.launch  openni2.launch  processing.launch
hubo_lidar_aggregator/: CMakeLists.txt  package.xml
hubo_lidar_aggregator/src/: lidar_aggregator_node.cpp
hubo_motion_components/: CMakeLists.txt  package.xml
hubo_motion_components/include/: hubo_motion_components
hubo_robot_msgs/: CMakeLists.txt
hubo_robot_msgs/action/: .PointHead.action.swp  EndEffectorPose.action  HokuyoScan.action  HuboGripperCommand.action  HybridTrajectory.action  JointCommand.action  JointTrajectory.action  PointHead.action  PoseTrajectory.action  Walk.action
hubo_robot_msgs/msg/: ComplianceConfig.msg  HokuyoScanParameters.msg  JointCommandFeedback.msg  JointCommandGoal.msg  JointCommandResult.msg  JointControllerState.msg  JointTrajectory.msg  JointTrajectoryState.msg  PoseTrajectory.msg  PoseTrajectoryPoint.msg  PoseTrajectoryState.msg  WalkGoal.msg
hubo_ros_core/: CMakeLists.txt  package.xml
hubo_sensor_msgs/: CMakeLists.txt  package.xml
hubo_sensor_msgs/action/: LaserScan.action
hubo_sensor_msgs/msg/: Empty.msg
hubo_system_msgs/: CMakeLists.txt  package.xml
hubo_system_msgs/msg/: HuboPower.msg
hubo_trajectory_interface/: CMakeLists.txt  package.xml
hubo_trajectory_interface/config/: drchubo_fullbody_interface.yaml  hubo_fullbody_interface.yaml  hubo_fullbody_interface_wfingers.yaml  huboplus_fullbody_interface.yaml  huboplus_fullbody_interface_wfingers.yaml
hubo_trajectory_interface/launch/: drchubo_full_body_trajectory_action_node.launch  drchubo_full_body_trajectory_controller_node.launch  drchubo_full_body_trajectory_interface.launch  full_body_trajectory_action_node.launch  full_body_trajectory_controller_node.launch  hubo_full_body_trajectory_action_node.launch  hubo_full_body_trajectory_controller_node.launch  hubo_full_body_trajectory_interface.launch  huboplus_full_body_trajectory_interface.launch
hubo_trajectory_interface/src/: hubo_trajectory_action.cpp  hubo_trajectory_compromise_interface.cpp  hubo_trajectory_ideal_interface.cpp
(+13 files in other folders)
