<?xml version="1.0"?>
<package>
  <name>hubo_ach_ros_bridge</name>
  <version>0.0.1</version>
  <description>The hubo_ach_ros_bridge package</description>

  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hubo_robot_msgs</build_depend>
  <build_depend>hubo_sensor_msgs</build_depend>
  <build_depend>hubo_system_msgs</build_depend>
  <build_depend>hubo_ach_components</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>hubo_robot_msgs</run_depend>
  <run_depend>hubo_sensor_msgs</run_depend>
  <run_depend>hubo_system_msgs</run_depend>
  <run_depend>hubo_ach_components</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
