<?xml version="1.0"?>
<package>
  <name>hubo_components</name>
  <version>0.0.1</version>
  <description>The hubo_components package</description>

  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
