<?xml version="1.0"?>
<package>
  <name>hubo_forward_kinematics</name>
  <version>0.0.1</version>
  <description>The hubo_forward_kinematics package</description>

  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>eigen</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
