<?xml version="1.0"?>
<package>
  <name>hubo_lidar_aggregator</name>
  <version>0.0.1</version>
  <description>The hubo_lidar_aggregator package</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>laser_geometry</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>hubo_sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>laser_geometry</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>hubo_sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
